--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -445,10 +445,23 @@ footer{
 .count{
     margin: 0 auto;
     width: 1120px;
+    margin-top: 20px;
+    height:180px;
 }
-.count img{
+.count div{
+    float: left;
+    width: 275px;
+    height: 150px;
+}
+.count div span{
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    color: #3d4d55;
+}
+.count div img{
     margin:0 auto;
-    margin-top: 80px;
 }
 .understand{
     width:330px;
@@ -588,7 +601,8 @@ footer{
     height:418px;
 }
 .advantage h1{
-    width:336px;
+    width: 100%;
+    text-align: center;
     height:67px;
     margin:0 auto;
     margin-top: 40px;
@@ -597,13 +611,21 @@ footer{
     color: #384850;
 }
 .adv-item{
-    width: 250px;
+    width: 180px;
     height:250px;
     float: left;
-    margin-left: 100px;
+    margin-left: 145px;
     margin-top: 75px;
 }
-.adv-item p{
+.adv-item-img{
+    width: 180px;
+    margin: 0 auto;
+}
+.adv-item-img img{
+    display: block;
+    margin:0 auto;
+}
+.adv-item-p{
     width:180px;
     font-size: 18px;
     font-weight: 300;
@@ -769,6 +791,7 @@ footer{
     border-bottom: 1px solid #cccccc ;
     height:150px;
     margin-top: 30px;
+    width: 470px;
 }
 .info-item .name{
     color: #37474f;
@@ -807,7 +830,6 @@ footer{
     font-stretch: normal;
     letter-spacing: normal;
     text-align: center;
-    margin-right: 73px;
 }
 .teachers{
     width: 980px;
@@ -817,7 +839,6 @@ footer{
 }
 .headteacher{
     height:330px;
-    visibility:hidden
 }
 .teacher-avatar{
     float: left;
@@ -857,12 +878,22 @@ footer{
     width:1020px;
     margin: 0 auto;
 }
+.teacher-row .teacher-item:last-of-type{
+    margin-right: 0;
+}
+.teacher-row{
+    width: 980px;
+    height: 330px;
+    margin: 0 auto;
+    margin-top: 20px;
+
+}
 .teacher-item{
     position: relative;
-    margin:  40px 20px 0px 20px ;
     width: 300px;
     height:330px;
     float: left;
+    margin-right: 20px;
 }
 .teacher-item .img{
     position: absolute;
@@ -1025,7 +1056,7 @@ footer{
     color: #ffffff;
 }
 .desc p{
-
+    line-height:24px;
 }
 .desc .desc {
     float: left;
