--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -2116,3 +2116,22 @@ select::-ms-expand { display: none; }
     line-height: normal;
     letter-spacing: normal;
 }
+.video{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: #3d4d55;
+    z-index: 1000;
+    display: none;
+    position: fixed;
+}
+.video video{
+    display: block;
+    margin: 0 auto;
+    margin-top: 150px;
+    width: 800px;
+    height:500px;
+    z-index: 9999;
+}
