--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -894,9 +894,10 @@ footer{
 .information .content{
     font-size:18px;
     height: 90px;
+    weight: 900px;
     margin-top: 20px;
     font-weight: 500;
-    overflow: hidden;
+    /*overflow: hidden;*/
     text-overflow:ellipsis;
     white-space: nowrap;
 }
