--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -10,6 +10,15 @@
     url('../font/PingFang Medium.ttf') format('truetype'),
     url('../font/PingFang Medium.svg#PingFang') format('svg');
 }
+@font-face {
+    font-family: 'PlutoSans';
+    src: url('../font/PlutoSansRegular.eot');
+    src: local('PingFang Regular'),
+    local('PingFang'),
+    url('../font/PlutoSansRegular.woff') format('woff'),
+    url('../font/PlutoSansRegular.ttf') format('truetype'),
+    url('../font/PlutoSansRegular.svg#PlutoSans') format('svg');
+}
 html {
     font-size: 16px;
     color: #37474f;
@@ -227,7 +236,7 @@ ul{
 }
 .listen{
     position: relative;
-    left: 800px;
+    left: 880px;
     top:20px;
     width: 400px;
     height: 600px;
@@ -309,12 +318,12 @@ footer{
     box-sizing: border-box;
 }
 .footer-main .row{
-    width: 1440px;
+    width: 1100px;
     margin: 0 auto;
 }
 .qrcode{
     float: left;
-    width: 390px;
+    width: 200px;
     margin-left: 170px;
 }
 .qrcode img{
@@ -693,7 +702,7 @@ footer{
     font-size: 18px;
     color: #384850;
     margin: 0 auto;
-
+    background-color: rgba(0,0,0,0);
 }
 .input input::-webkit-input-placeholder{
     text-align: center;
@@ -887,7 +896,6 @@ footer{
     font-size:18px;
     height: 90px;
     weight: 900px;
-    margin-top: 20px;
     font-weight: 500;
     /*overflow: hidden;*/
     text-overflow:ellipsis;
@@ -1222,6 +1230,7 @@ option{
     left: 20px;
     position: absolute;
     text-align-last: center;
+    background-color: rgba(0,0,0,0);
 }
 .course-detail i{
     position: absolute;
@@ -1698,6 +1707,9 @@ margin: 0 auto;
     text-align: center;
     font-size: 18px;
     font-weight: 500;
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
 }
 
 .input-text input{
@@ -1737,6 +1749,7 @@ margin: 0 auto;
     position: relative;
     top:0;
     color: #3d4d55;
+    background-color: rgba(0,0,0,0);
 text-align-last: center;
 }
 .course-level select option{
