--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -61,6 +61,9 @@ input::-webkit-input-placeholder{
     font-size: 16px;
     padding: 0px;
 }
+h1{
+    font-weight: bold;
+}
 input{
     width:260px ;
     height: 50px;
