--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -1358,10 +1358,19 @@ option{
     height:60px;
     line-height:60px;
 }
+
 .radios{
-    width:100%;
+    width:1100px;
     height:330px;
+    margin: 0 auto;
     margin-top: 40px;
+    position: relative;
+}
+.radios .img-left,.radios .img-right{
+    top:120px;
+}
+.comment .img-left,.comment .img-right{
+    top:120px;
 }
 .radios-item{
     width:330px;
@@ -1369,9 +1378,6 @@ option{
     float: left;
     height:100%;
     margin-left: 25px;
-}
-.radios-item:first-of-type{
-    margin-left: 0;
 }
 .radios-item .img{
     width:330px;
@@ -1423,6 +1429,7 @@ option{
 .study .comment{
     width:1100px;
     margin: 0 auto;
+    position: relative;
 }
 .study .comment .comment-item{
     float: left;
@@ -1478,7 +1485,7 @@ option{
     margin-top: 60px;
      width:100%;
     text-align: center;
-    color: #002e6d;
+    color: #384850;
     font-size: 48px;
     margin-bottom: 40px;
  }
@@ -1550,7 +1557,7 @@ option{
     margin-top: 60px;
     width:100%;
     text-align: center;
-    color: #002e6d;
+    color: #384850;
     font-size: 48px;
     margin-bottom: 40px;
 }
@@ -1565,12 +1572,13 @@ option{
     height:100%;
     position: relative;
     display: inline-flex;
+    overflow: hidden;
 }
 .img-list .path-img{
     float: left;
     width:480px;
 }
-.img-gd .img-left{
+.img-left{
     position: absolute;
     top: 240px;
     width: 50px;
@@ -1587,7 +1595,7 @@ option{
     cursor:pointer;
     cursor:hand;
 }
-.img-gd .img-right{
+.img-right{
     position: absolute;
     top: 240px;
     right:0;
@@ -1609,7 +1617,7 @@ option{
     margin-top: 60px;
     width:100%;
     text-align: center;
-    color: #002e6d;
+    color: #384850;
     font-size: 48px;
     margin-bottom: 40px;
 }
@@ -1937,15 +1945,27 @@ text-align-last: center;
     min-width: 220px;
     padding-left:15px ;
     font-size: 18px;
+    width:100%;
+    height:100%;
+    background-color: rgba(0,0,0,0);
 }
 .window-input input[type='password']{
     min-width: 220px;
     padding-left:15px ;
     font-size: 18px;
+    width:100%;
+    height:100%;
+    background-color: rgba(0,0,0,0);
+}
+.half{
+    width:65%!important;
 }
 .window-input input[type='text']::-webkit-input-placeholder{
     color: #002f6c;
     font-size: 18px;
+}
+.window-input img{
+    height: 100%;
 }
 .input-half[type='text']{
     width: 220px;
