--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -921,6 +921,9 @@ footer{
     padding:30px;
     box-sizing: border-box;
 }
+.resume {
+    white-space: pre-line;
+}
 
 .information .name{
     font-size:32px;
