wap teacher data binding

--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -2290,6 +2290,7 @@ select::-ms-expand { display: none; }
     font-weight: bold;
 }
 .detail_content{
+    white-space: pre-line;
     overflow: hidden;
 }
 .ll{
