--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -61,7 +61,8 @@ input::-webkit-input-placeholder{
     font-size: 16px;
     padding: 0px;
 }
-h1{
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
+    font-family: PlutoSans,PingFang !important;
     font-weight: bold;
 }
 input{
