--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/css/index.css
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/css/index.css
@@ -265,29 +265,29 @@
     width: 100%;
     height:6rem;
 }
-.city_list {
-    width: 7.1rem;
-    margin: 0 auto;
-    height:1rem;
-    padding-top:0.2rem ;
-    box-sizing: border-box;
+.city_list{
+    width:100%;
+    padding-top: 0.4rem;
+}
+.city_list .active{
+    background-color: #fc384c;
+    color: #ffffff;
+    border: 0;
 }
 .city_item{
-    float: left;
+    background-color: #ffffff;
     width: 1.4rem;
-    height:0.52rem;
+    height: 0.52rem;
     border-radius: 0.3rem;
-    border: solid 1px #37474f;
+    border: solid 0.01rem #37474f;
+    float: left;
+    margin: 0 0.22rem 0.52rem 0.22rem;
     text-align: center;
-    font-size: 0.28rem;
-    font-weight: 500;
-    font-style: normal;
-    font-stretch: normal;
     line-height: 0.52rem;
-    letter-spacing: normal;
     color: #37474f;
-    margin-right: 0.5rem;
+    font-weight: 500;
     box-sizing: border-box;
+    font-size: 0.28rem;
 }
 .clear-right{
     margin-right: 0;
