--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -843,20 +843,24 @@ footer{
 .info-position{
     margin-top: 10px;
     font-size:18px;
+    height: 54px;
 }
 .info-tel{
-    padding-left: 18px;
+    padding-left: 12px;
     font-size: 16px;
     color: #3d4d55;
 }
 .info-email{
-    padding-left: 18px;
+    padding-left: 12px;
     font-size: 16px;
     color: #3d4d55;
 }
 .info-position i{
     font-size: 20px;
     color: #ff9933;
+    height: 100%;
+    float: left;
+    padding-top: 3px;
 }
 .info-submit{
     width: 200px;
