--- a/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
+++ b/thinkcmf-5.0.180626/public/themes/RY/icr/css/main.css
@@ -1,4 +1,4 @@
-/*
+﻿/*
 主css
  */
 @font-face {
@@ -1783,7 +1783,7 @@ margin: 0 auto;
     background-color: #FFFFFF;
 }
 .time_title{
-    text-align: center;
+    text-align: left;
     font-weight: bold;
 }
 .popup .opentime{
@@ -1791,7 +1791,17 @@ margin: 0 auto;
 }
 .wd-title{
     margin: 0 auto;
-    width:100%;
+    width:400px;
+    font-weight: bold;
+    text-align: left;
+    font-size: 24px;
+    padding-top: 50px;
+    border-radius: 10px;
+}
+.wd-title3{
+    margin: 0 auto;
+    width:400px;
+    font-weight: bold;
     text-align: center;
     font-size: 24px;
     padding-top: 50px;
@@ -1809,11 +1819,18 @@ margin: 0 auto;
     width:400px;
     margin: 0 auto;
     margin-top: 10px;
+    text-align: left;
+    font-size: 14px;
+    font-weight: 500;
+}
+.wd-title4{
+    width:400px;
+    margin: 0 auto;
+    margin-top: 10px;
     text-align: center;
     font-size: 14px;
     font-weight: 500;
 }
-
 .input-text input{
     width:400px!important;
     margin: 0 auto;
