--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/css/course.css
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/css/course.css
@@ -134,11 +134,11 @@
     top: 0;
     width:100%;
     height:2.81rem;
+    line-height: 2.81rem;
     background-color:#000000 ;
     background-color: rgba(0,0,0,0.2);
     text-align: center;
     font-size: 0.8rem;
-    padding-top: 0.4rem;
     color: #ffffff;
     box-sizing: border-box;
 }
