--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/css/style.css
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/css/style.css
@@ -418,6 +418,7 @@ input, button, select, textarea {
     margin-top: 0.4rem;
     text-align: center;
     font-size: 0.32rem;
+    padding: 0;
 }
 .input-text input:-ms-input-placeholder{
     text-align: center;
