--- a/thinkcmf-5.0.180626/public/themes/icr_wap/icr/css/style.css
+++ b/thinkcmf-5.0.180626/public/themes/icr_wap/icr/css/style.css
@@ -222,7 +222,8 @@ input, button, select, textarea {
     width:5.62rem ;
     margin: 0 auto;
     font-size: 0.28rem;
-    color: #3d4d55;
+    font-weight: bold;
+    color: #002F6C;
     text-align: center;
 }
 .item-title p{
